--- a/.choreo/endpoints.yaml
+++ b/.choreo/endpoints.yaml
@@ -4,4 +4,5 @@ endpoints:
     port: 8290
     type: REST
     networkVisibility: Public
+    context: /salesforce
     schemaFilePath: mimssql_openapi.yaml
